--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,10 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 
-
-
-
 spring.datasource.url=jdbc:mysql://172.17.0.2:3306/hotel?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 
