--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
 			<artifactId>flyway-mysql</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-security</artifactId>-->
+<!--		</dependency>-->
+
+
 	</dependencies>
 
 	<build>
